# InstaMAL

./: README.md  pyproject.toml  setup.py
evaluation/: README.md  model_equivalence.py  prompt.txt
evaluation/CTID_emulation_plans/: blind_eagle.spec  ocean_lotus.spec  oilrig.spec
evaluation/CTID_emulation_plans/reference_models/: Turla Scenario Carbon.yml  Turla Scenario Snake.yml  Wizard Spider Scenario 1.yml  apt29_scenario1.yml  apt29_scenario2.yml  blind_eagle.yml  carbank_scenario1.yml  fin6_phase1_and_2.yml  fin7_scenario1.yml  menuPass_scenario1.yml  ocean_lotus.yml  oilrig.yml  sandworm_scenario1.yml
evaluation/LLM_input/emulation_plan_descriptions/: fin6_phase1_and_2.txt  menuPass_scenario1.txt  oilrig.txt  sandworm_scenario1.txt  wizard_spider_scenario1.txt
evaluation/menuPass_scenario1/: llm_output.txt  rubric_checks.py
evaluation/motif_scan/: ModelsToEdgeList.py  README.md  motif_scan.sh
evaluation/specifications/: menuPass_scenario1.spec
evaluation/tests/: test_menuPass_scenario1.py
examples/: trainingLang_connect.spec  trainingLang_subsystem.spec
examples/coreLang/: menuPass_scenario1.spec
examples/trainingLang/: org.mal-lang.trainingLang-1.0.0.mar  trainingLang_connect.spec  trainingLang_enterprise_network.spec  trainingLang_nested_subsystem.spec  trainingLang_subsystem.spec
instamal/: __init__.py  __main__.py  distributions.py  requirements.txt
instamal/instantiation/: __init__.py  instantiator.py
instamal/instantiation/spec_analysis/: __init__.py  specification_analyzers.py
instamal/instantiator/: ModelInstantiator.py  __init__.py
instamal/instantiator/helpers/: Spec.g4  SpecParser.py  __init__.py  antlr_build.sh  distributions.py
instamal/language/: Spec.g4  SpecLexer.py  SpecParser.py  SpecVisitor.py  __init__.py  antlr_build.sh  spec_lexer.py  spec_parser.py  spec_visitor.py
instamal/visualization/: __init__.py  visualization.py
motif_scan/: README.md
src/instamal/: __main__.py
src/instamal/instantiator/: ModelInstantiator.py
src/instamal/instantiator/helpers/: MultiplicityAnalyzer.py  Spec.g4  SpecAnalyzer.py  SpecLexer.py  SpecParser.py  SpecVisitor.py  __init__.py  distributions.py
src/instamal/visualizer/: ModelVisualizer.py  __init__.py
tests/: conftest.py  test_analyzer.py  test_defense_control.py  test_multiplicity_probabilistic.py  test_multiplicity_static.py  test_prune.py  test_semantics.py
tests/testdata/: inheritanceLang.mal  multiplicityLang.mal  pruneLang.mal
